fixed some spacing stuff

--- a/services/v1/samples/notebook/css.css
+++ b/services/v1/samples/notebook/css.css
@@ -24,8 +24,8 @@ div
 
 #header_selector_box
 {
-    margin:5px auto;
-    height:80px;
+    margin:10px auto;
+    height:65px;
     width:900px;
 }
 
